@@ -4,6 +4,7 @@ v1.3.1 - TBD
   Fix warnings in console log relating to inaccessible block loot table entries.
    - Also fixes not being able to silk-touch Gem Ore blocks.
    - Only in Minecraft 1.14 and 1.15 versions.
+  Added a config option to control blending effects in certain machines.
 
 
 
